--- a/client.yml
+++ b/client.yml
@@ -1,6 +1,7 @@
 eureka:
   client:
-    service-url: http://localhost:8761/eureka
+    service-url: 
+      defaultZone: http://localhost:8761/eureka
 management:
   endpoint:
     health:
