--- a/client.yml
+++ b/client.yml
@@ -8,7 +8,7 @@ management:
       show-details: always
 spring:
   application:
-    name: eureka-client111
+    name: eureka-client
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:mysql://127.0.0.1:3306/springclound
