--- a/client.yml
+++ b/client.yml
@@ -11,7 +11,7 @@ spring:
     name: eureka-client
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1:3306/springclound
+    url: jdbc:mysql://127.0.0.1:3306/springcloud
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
